--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
         <div class="contenedor">
             <nav class="menu">
                 <a href="#" id="btn-acerca-de"> <b>Acerca de</b></a>
-                <a href="#" id="btn-menu"><b>Menu</b></a>
-                <a href="#" id="btn-galeria"><b>Galeria</b></a>
+                <a href="#" id="btn-menu"><b>Menú</b></a>
+                <a href="#" id="btn-galeria"><b>Galería</b></a>
                 <a href="#" id="btn-ubicacion"><b>Ubicación</b></a>
             </nav>
 
